# isolation-sphere

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  dev.sh  docker-build.sh  docker-compose.yml  flash-monitor.sh  monitor-loop.sh  monitor-reset.sh  sdkconfig.defaults
components/bno055/: CMakeLists.txt  README.md
components/bno055/include/: bno055.h
components/bno055/src/: bno055.c
components/hardware_test/: CMakeLists.txt
components/hardware_test/include/: hardware_info.hpp
components/hardware_test/src/: hardware_info.cpp
components/hardware_test/test/: test_hardware_info.cpp
components/ros2_manager/: CMakeLists.txt
components/ros2_manager/include/: ros2_manager.h
components/ros2_manager/src/: ros2_manager.c
components/test_framework/: CMakeLists.txt
components/test_framework/include/: base_test.hpp  bno055_test.hpp  psram_test.hpp  ros2_test.hpp  test_manager.hpp  wifi_test.hpp
components/test_framework/src/: base_test.cpp  bno055_test.cpp  psram_test.cpp  ros2_test.cpp  test_manager.cpp  wifi_test.cpp
components/wifi_manager/: CMakeLists.txt  README.md
components/wifi_manager/include/: wifi_manager.h
components/wifi_manager/src/: wifi_manager.c
main/: CMakeLists.txt  main.c  main.cpp  test_main.cpp
tests/: README.md  test01-psram.md  test02-bno055.md  test03-wifi.md
